# get_cat_facts

./: Cargo.toml
src/: lib.rs  main.rs
src/core/: client.rs  error.rs
