[package]
name = "random_http_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.27", features = ["full"]}
hyper-tls = "0.5.0"
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["full"]}
